--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -333,10 +333,6 @@ body {
     padding-right: 10px !important;
   }
 
-  .list-group-item {
-    /*text-align: center !important;*/
-  }
-
   .thumbnail {
     text-align: center !important;
     float: none !important;
@@ -367,7 +363,11 @@ body {
 
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
   background-color: #FFFFFF;
-  color: #6CAA0A;
+  color: #89cc1d;
+}
+
+.seller-title-bar {
+  display: inline !important;
 }
 
 .nav > li > a {
@@ -389,4 +389,28 @@ color: #000 !important;
 .seller-location-details {
   padding-left:15px;
 }
+
+.edit-text {
+  color:#8ed41e;
+  padding: 5px;
+}
+
+.well {
+  padding-bottom: 5px;
+}
+
+.edit-text-container {
+  text-align: right;
+}
+
+.edit-text:hover {
+  color:#89cc1d;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.list-group-item {
+  padding-bottom: 0px !important;
+}
+
 /* SELLER UI ENDS*/
