--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -36,7 +36,7 @@
             <h3>Your Locations</h3>
         </div>
         <div class="col-xs-3 add-new-button-container">
-            <button class="btn beLocal-btn-filled btn-md pull-right" data-toggle="modal" ng-click="resetLocationModal()" data-target="#locationModal">Create New Location</button>
+            <button class="btn beLocal-btn-filled btn-md pull-right btn-action" data-toggle="modal" ng-click="resetLocationModal()" data-target="#locationModal">Create New Location</button>
 
         </div>
     </div>
@@ -98,7 +98,7 @@
             <h3>Your Inventory</h3>
         </div>
         <div class="col-xs-2 add-new-button-container">
-            <button class="btn beLocal-btn-filled btn-md pull-right" data-toggle="modal" data-target="#itemModal" ng-click="resetItemModal()">Create New Item</button>
+            <button class="btn beLocal-btn-filled btn-md pull-right btn-action" data-toggle="modal" data-target="#itemModal" ng-click="resetItemModal()">Create New Item</button>
         </div>
     </div>
 
