--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -358,7 +358,7 @@ body {
 .seller-title-bar{
   padding-left: 0px;
   padding-right: 0px;
-  padding top: 30px;
+  padding-top: 30px;
 }
 
 .all-locations {
