--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -144,15 +144,6 @@ div.box {
   background: #8ed41e !important;
 }
 
-/*.border-left {
-  height: 50px !important;
-}
-
-.border-right {
-  height: 50px !important;
-  margin: 0px !important;
-} */
-
 div.box a {
   color: white !important;
 }
@@ -273,7 +264,6 @@ body {
     .collapse.in{
         display:block !important;
     }
-
 }
 
 /* SELLER UI STARTS */
@@ -323,8 +313,20 @@ body {
   max-width: 970px !important;
 }
 
+.seller-item-stock {
+  vertical-align: center;
+  border-top: 1px solid #dddddd;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.seller-item {
+  text-align: right !important;
+}
+
 .seller-item-stock input[type="radio"]{
   margin-left:25px;
+  text-align: right !important;
 }
 
 @media (max-width: 767px) {
@@ -342,6 +344,14 @@ body {
     float: none !important;
     display: inline-block;
   }
+
+    .seller-item-stock {
+      text-align: left;
+    }
+
+    .item-content-container{
+      padding-left: 0px !important;
+    }
 }
 
 .edit-button-container {
@@ -352,13 +362,12 @@ body {
 .add-new-button-container {
   top:15px;
   text-align: right;
-  padding-right: 0px;
+  padding-right: 15px;
 }
 
 .seller-title-bar{
   padding-left: 0px;
   padding-right: 0px;
-  padding-top: 30px;
 }
 
 .all-locations {
@@ -389,11 +398,6 @@ color: #000 !important;
     border-radius:0px;
 }
 
-
-.seller-location-details {
-  padding-left:15px;
-}
-
 .edit-text {
   color:#8ed41e;
   padding: 5px;
@@ -415,6 +419,16 @@ color: #000 !important;
 
 .list-group-item {
   padding-bottom: 0px !important;
+}
+
+.item-content-container {
+  padding-left: 15px;
+
+}
+
+.seller-item-list {
+  padding: 5px;
+  vertical-align: center;
 }
 
 /* SELLER UI ENDS*/
