--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="seller-Name col-sm-9">
-        <h1>Sellers Name Here</h1>
+        <h1>{{StateService.getCurrentUser().name}}</h1>
     </div>
 </div>
 <div class="seller-tabs">
@@ -36,7 +36,7 @@
             <h3>Your Locations</h3>
         </div>
         <div class="col-xs-3 add-new-button-container">
-            <button class="btn beLocal-btn-filled btn-md pull-right btn-action" data-toggle="modal" ng-click="resetLocationModal()" data-target="#locationModal">Create New Location</button>
+            <button class="btn beLocal-btn-filled btn-md pull-right" data-toggle="modal" ng-click="resetLocationModal()" data-target="#locationModal">Create New Location</button>
 
         </div>
     </div>
@@ -98,49 +98,68 @@
             <h3>Your Inventory</h3>
         </div>
         <div class="col-xs-2 add-new-button-container">
-            <button class="btn beLocal-btn-filled btn-md pull-right btn-action" data-toggle="modal" data-target="#itemModal" ng-click="resetItemModal()">Create New Item</button>
+            <button class="btn beLocal-btn-filled btn-md pull-right" data-toggle="modal" data-target="#itemModal" ng-click="resetItemModal()">Create New Item</button>
         </div>
     </div>
 
 
 
 <!-- repeating for each item that seller has in the db -->
- <div ng-repeat="location in sellerLocations">
-        <div class="list-group-item">
-            <div class="row">
+ <div ng-repeat="location in sellerLocations">  <!-- fix repeat when hooked up -->
 
-            <div class="col-sm-2 thumbnail hidden-xs">
-                <img src="http://media.mercola.com/assets/images/food-facts/carrot-nutrition-facts.jpg"/>
+        <!-- Need this div to allow for space between each of the sellers items -->
+        <div class="list-group-item" >
+            <div class="row item-content-container">
+
+            <!-- Display the locations name -->
+                <div class="col-xs-2 thumbnail hidden-xs">
+                    <img src="http://media.mercola.com/assets/images/food-facts/carrot-nutrition-facts.jpg"/>
+                </div>
+                <div class="col-xs-9 col-sm-7">
+                    <h4>{{item.name}} Item name here</h4>
+                    Item Description here... blah, blah, blah
+                </div>
+
+                <!-- Display icons which link to corresponding modals (tooltips are outer span tag) -->
+                <div class="col-xs-3 edit-text-container">
+                    <span data-toggle="tooltip" data-placement="bottom" title="Edit Item">
+                        <span class="edit-text glyphicon glyphicon-edit" data-toggle="modal" data-target="#itemModal" ng-click="editItem(item)"></span>
+                    </span>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Delete Item">
+                        <span class="edit-text glyphicon glyphicon-trash" data-toggle="modal" data-target="TBA"></span>
+                    </span>
+                </div> 
             </div>
-            <div class="col-sm-8 col-xs-10">
-                <h4>Item Name</h4>
-                Item Description
+
+        <!-- THIS IS THE NON-REPEATING PART -->
+        <div class="row all-locations seller-item-stock">
+            <div class="col-sm-4 ">
+                <b>ALL LOCATIONS</b>
             </div>
-            <div class="col-sm-2 col-xs-2 edit-button-container">
-                <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#locationModal">Edit</button>
+            <div class="col-sm-8 seller-item">
+                <input type="radio" name="stock-status" value="InStock"> In Stock
+                <input type="radio" name="stock-status" value="OutOfStock"> Out of Stock
             </div>
         </div>
-        <div class="row list-group-item all-locations">
-            All Locations
-            <div class="pull-right seller-item-stock">
-                <input type="radio" name="stock-status" value="InStock"> In Stock 
-                <input type="radio" name="stock-status" value="OutOfStock"> Out of Stock 
+
+        <!-- THIS IS THE STUPID REPEATING PART INSIDE THE OTHER REPEATING PART -->
+        <!-- repeat f each seller location -->
+        <div ng-repeat="location in sellerLocations" class="row seller-item-stock">
+            <div class="col-sm-4">
+                Sample Location
+            </div>
+            <div class="col-sm-8 seller-item">
+                <input type="radio" name="stock-status" value="InStock"> In Stock
+                <input type="radio" name="stock-status" value="OutOfStock"> Out of Stock
             </div>
         </div>
-
-        <!-- repeat for each seller location -->
-        <div class="row list-group-item">
-            Sample Location
-            <div class="pull-right seller-item-stock">
-                <input type="radio" name="stock-status2" value="InStock"> In Stock 
-                <input type="radio" name="stock-status2" value="OutOfStock"> Out of Stock 
-            </div>
-        </div>
-
     </div>
-    <!--  end of repeat for each seller location -->
     <br>
+    <!--  end of repeat for each seller's items location -->
+
 </div>
+<!--  end of repeat for each item the seller sells-->
+
 
 </div>
 <!-- END OF CONTAINTER-SELLER -->
