--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -25,8 +25,8 @@
   <div class="tab-pane" id="markets"></div>
   <div class="tab-pane active" id="trending">
     <div class="container container-home-page">
-      <div ng-repeat="items in trendingProducts | groupBy:3" class="row">
-        <div class="col-sm-4" ng-repeat="item in items" >
+      <div ng-repeat="items in trendingProducts | groupBy:3" class="row container-trending">
+        <div class="col-trending col-lg-4 col-md-6 col-sm-6" ng-repeat="item in items" >
           <product-card data="item"></product-card>
         </div>  
         </div>
