added basic end to end vendor card functionality.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -29,11 +29,22 @@
         <div class="col-sm-4" ng-repeat="item in items" >
           <product-card data="item"></product-card>
         </div>  
-        </div>
+       </div>
       <div class="footer">
         <p>♥ from the beLocal team</p>
       </div>
     </div>
   </div>
-  <div class="tab-pane" id="vendors"></div>  
+  <div class="tab-pane" id="vendors">
+    <div class="container container-home-page">
+      <div ng-repeat="items in vendors | groupBy:3" class="row">
+        <div class="col-sm-4" ng-repeat="vendor in vendors" >
+          <vendor-card data="vendor"></vendor-card>
+        </div>  
+       </div>
+      <div class="footer">
+        <p>♥ from the beLocal team</p>
+      </div>
+    </div>  	
+  </div>  
 </div>
