--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -37,11 +37,9 @@
   </div>
   <div class="tab-pane" id="vendors">
     <div class="container container-home-page">
-      <div ng-repeat="items in vendors | groupBy:3" class="row">
-        <div class="col-sm-4" ng-repeat="vendor in vendors" >
-          <vendor-card data="vendor"></vendor-card>
-        </div>  
-       </div>
+      <div ng-repeat="vendor in vendors">
+      	<vendor-card data="vendor"></vendor-card>
+      </div> 
       <div class="footer">
         <p>♥ from the beLocal team</p>
       </div>
