--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -105,7 +105,7 @@
 
 
 <!-- repeating for each item that seller has in the db -->
- <div ng-repeat="location in sellerLocations">  <!-- fix repeat when hooked up -->
+ <div ng-repeat="product in sellerItems">
 
         <!-- Need this div to allow for space between each of the sellers items -->
         <div class="list-group-item" >
@@ -113,11 +113,12 @@
 
             <!-- Display the locations name -->
                 <div class="col-xs-2 thumbnail hidden-xs">
-                    <img src="http://media.mercola.com/assets/images/food-facts/carrot-nutrition-facts.jpg"/>
+                    <img ng-src="{{product.photo.image_url}}"/>
+
                 </div>
                 <div class="col-xs-9 col-sm-7">
-                    <h4>{{item.name}} Item name here</h4>
-                    Item Description here... blah, blah, blah
+                    <h4>{{product.name}}</h4>
+                    {{product.description}}
                 </div>
 
                 <!-- Display icons which link to corresponding modals (tooltips are outer span tag) -->
@@ -137,20 +138,19 @@
                 <b>ALL LOCATIONS</b>
             </div>
             <div class="col-sm-8 seller-item">
-                <input type="radio" name="stock-status" value="InStock"> In Stock
-                <input type="radio" name="stock-status" value="OutOfStock"> Out of Stock
+                <input type="radio" name="all-stock-status" value="IS"> In Stock
+                <input type="radio" name="all-stock-status" value="OOS"> Out of Stock
             </div>
         </div>
 
-        <!-- THIS IS THE STUPID REPEATING PART INSIDE THE OTHER REPEATING PART -->
         <!-- repeat f each seller location -->
-        <div ng-repeat="location in sellerLocations" class="row seller-item-stock">
+        <div ng-repeat="inventory in product.inventories" class="row seller-item-stock">
             <div class="col-sm-4">
-                Sample Location
+                {{inventory.sellerLocation.name}}
             </div>
             <div class="col-sm-8 seller-item">
-                <input type="radio" name="stock-status" value="InStock"> In Stock
-                <input type="radio" name="stock-status" value="OutOfStock"> Out of Stock
+                <input type="radio" name="stock-status{{$index}}" value="IS"> In Stock
+                <input type="radio" name="stock-status{{$index}}" value="OOS"> Out of Stock
             </div>
         </div>
     </div>
@@ -159,7 +159,6 @@
 
 </div>
 <!--  end of repeat for each item the seller sells-->
-
 
 </div>
 <!-- END OF CONTAINTER-SELLER -->
