--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1,5 +1,13 @@
 /* BELOCAL STYLES */
 
+.no-bottom-margin {
+  margin-bottom: 0px;
+}
+
+.no-top-margin {
+  margin-top: 0px;
+}
+
 .container-md {
   text-align: right;
 }
