--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -77,11 +77,11 @@
                 </p>
 
                 <p><b>CONTACT INFORMATION:</b>
-                    contact info goes here
+                    {{location.phone}} | {{location.email}}
                 </p>
 
                 <p><b>DETAILS:</b>
-                    details go here
+                    {{location.description}}
                 </p>
                 </div>
         </div>
@@ -219,8 +219,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 ng-hide="isEditingLocation" class="modal-title">Add New Location<br /><small>Please complete the following fields to add a new seller location</small></h4>
-                <h4 ng-show="isEditingLocation" class="modal-title">Edit Location<br /><small>Please change any of the fields below to update an existing seller location</small></h4>                
+                <h4 ng-hide="isEditingLocation" class="modal-title">Add New Location<br /><small>Please complete the following fields to add a new location</small></h4>
+                <h4 ng-show="isEditingLocation" class="modal-title">Edit Location<br /><small>Please change any of the fields below to update an existing location</small></h4>                
             </div>
             <div class="modal-body">  
                 <div class="container-fluid">                   
@@ -268,7 +268,7 @@
                                     <input required type="text" class="form-control" size="8" ng-model="endTime" name="endField" bs-timepicker>
                                 </div>
                             </div>
-                        </div>    
+                        </div>
                         <div class="row">
                             <div class="well">
                                 <div class="row">
@@ -286,33 +286,55 @@
                                             <input required ng-model="locationCity" type="text" class="form-control" id="item-name" name="cityField" placeholder="City"/>
                                         </div>
                                     </div>
-                                </div> 
-                                <div class="row">
                                     <div class="col-xs-6 col-md-6" ng-class="{'has-error': newLocationSubmitted && locationForm.provinceField.$invalid}">
                                         <div class="form-group">
                                             <label for="item-name">Province</label>
                                             <input required ng-model="locationProvince" type="text" class="form-control" id="item-name" name="provinceField" placeholder="Province"/>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-xs-6 col-md-6">
                                         <div class="form-group" ng-class="{'has-error': newLocationSubmitted && locationForm.postalCodeField.$invalid}">
                                             <label for="item-name">Postal Code</label>
                                             <input required type="text" ng-model="locationPostalCode" class="form-control" id="item-name" name="postalCodeField" placeholder="Postal Code"/>
                                         </div>
-                                    </div>
+                                    </div>                                                                  
                                     <div class="col-xs-6 col-md-6" ng-class="{'has-error': newLocationSubmitted && locationForm.countryField.$invalid}">
                                         <div class="form-group">
                                             <label for="item-name">Country</label>
                                             <input required ng-model="locationCountry" type="text" class="form-control" id="item-name" name="countryField" placeholder="Country"/>
                                         </div>
-                                    </div>                                                                    
-                                </div>                                                                                                  
-                            </div>                            
-                        </div>                    
+                                    </div>                                  
+                                </div>                                                                                                 
+                            </div>
+                        </div>                                            
+                        <div class="row">
+                            <div class="col-xs-6 col-md-6" ng-class="{'has-error': newLocationSubmitted && locationForm.phoneField.$invalid}">
+                                <div class="form-group">
+                                    <label for="item-name">Phone Number</label>
+                                    <input required ng-model="phoneAtLocation" type="text" class="form-control" id="item-name" name="phoneField" placeholder="Phone Number"/>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-6">
+                                <div class="form-group" ng-class="{'has-error': newLocationSubmitted && locationForm.emailField.$invalid}">
+                                    <label for="item-name">Email</label>
+                                    <input required type="text" ng-model="emailAtLocation" class="form-control" id="item-name" name="emailField" placeholder="Email"/>
+                                </div>
+                            </div>                                                                   
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-md-12">
+                                <div class="form-group no-bottom-margin" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.locationDescriptionField.$invalid }">
+                                    <label for="item-name">Location Description</label>
+                                    <textarea required ng-model="locationDescription" type="text" name="locationDescriptionField" class="form-control" placeholder="Location Description"/>
+                                </div>
+                            </div>                        
+                        </div>                                                          
                     </form>
                 </div>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer no-top-margin">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button type="submit" ng-click="newLocationSubmit()" class="btn btn-primary">{{submitLocationButtonText}}</button>
             </div>
