--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="navbar-footer">
-    <p>"Discover local food from the comfort of your home"</p>
+    <p>Discover local food from the comfort of your home.</p>
   </div>
 </div> 
 
