Added product deletion with undo

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -131,7 +131,7 @@
                         <span class="edit-text glyphicon glyphicon-edit" data-toggle="modal" data-target="#itemModal" ng-click="editItem(item)"></span>
                     </span>
                     <span data-toggle="tooltip" data-placement="bottom" title="Delete Item">
-                        <span class="edit-text glyphicon glyphicon-trash" data-toggle="modal" data-target="TBA"></span>
+                        <span class="edit-text glyphicon glyphicon-trash" ng-click="deleteProduct(product)" data-toggle="modal" data-target="TBA"></span>
                     </span>
                 </div> 
             </div>
