--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1,5 +1,9 @@
 /* BELOCAL STYLES */
 
+.radio-padding-right {
+  padding-right: 15px;
+}
+
 #item-image {
   display: inline;
 }
@@ -99,7 +103,7 @@
   background-position-x: center;
   background-position-y: 70%;
   background-size: 100%;
-  height: 394px;
+  height: 325px;
   margin-bottom: 0px;
 }
 
