--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -7,7 +7,7 @@
 
 	<!-- BREADCRUMBS -->
 	<div class="breadcrumbs row">
-		ADD BREADCRUMBS HERE > VENDOR NAME
+		ADD BREADCRUMBS HERE > {{vendorDetails.vendor.company_name}}
 	</div>
 
 
@@ -17,7 +17,7 @@
 			<img src="http://gradschool.oregonstate.edu/sites/gradschool.oregonstate.edu/files/styles/square_medium/public/default_images/user_icon.png?itok=mbz2tJug">
 		</div>
 		<div class="col-sm-8 col-md-9 col-lg-9">
-			<h2>Name</h2>
+			<h2>{{vendorDetails.vendor.company_name}}</h2>
 			<p>Contact Info</P>
 
 			<h3>About The Vendor</h3>
@@ -26,6 +26,9 @@
 	</div>
 
 	<br>
+
+
+
 
 
 	<!-- SELLING LOCATIONS -->
@@ -96,7 +99,7 @@
 	    	</div>  
 	   </div>
 	</div>
-	
+
 
 </div>
 
