changed UI things

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -11,7 +11,7 @@
   </div>
 </div> 
 
-<div id="twitter-feed"></div>
+<!-- <div id="twitter-feed"></div> -->
 
 <div class="full-width-tabs seller-tabs container-fluid">
   <ul class="nav nav-pills" role="tablist">
