--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -18,10 +18,15 @@
 		</div>
 		<div class="col-sm-8 col-md-9 col-lg-9">
 			<h2>{{vendorDetails.vendor.company_name}}</h2>
-			<p>Contact Info</P>
+			<p>
+				WEBPAGE: {{vendorDetails.vendor.webpage}}<br>
+				PHONE: {{vendorDetails.vendor.phone}} Ext.{{vendorDetails.vendor.extension}}<br>
+				ADDRESS: {{vendorDetails.vendor.address.addr_line1}}, {{vendorDetails.vendor.address.city}}, {{vendorDetails.vendor.address.state}}<br>
+				<br>
+				ABOUT: A local company that sells produce.
 
-			<h3>About The Vendor</h3>
-			<p>about information here</p>
+
+			</P>
 		</div>
 	</div>
 
