--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -487,44 +487,76 @@ color: #000 !important;
 /*VENDOR DETAILS UI*/
 
 .container-vendor-details{
-  padding: 20px 30px 0px 30px !important;
+  padding: 0px 30px 0px 30px !important;
 }
 
 .breadcrumbs{
   color: #89cc1d;
+  font-size: 15px !important;
 }
 
 .panel-group {
   padding: 0px 0px 0px 10px;
 }
 
-.panel-colours-vendor-details {
-  background-color: #E4F3D9 !important;
-}
-
-
-.panel-default {
-  border: 1px solid #8ed41d !important;
-}
 
 .panel-heading:hover {
   cursor: pointer;
-  background-color: #E4F3DA;
+  background-color: #F0f0f0;
 }
 
 .faded-box-edge {
     border: 6px solid #E4F3DA !important;
-    padding: 0px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
     border-radius: 7px;
 }
 
-.vendorAvatar {
-  padding:5px !important;
+.HeaderText {
+  font-size: 15px;
+  padding: 0px;
+  color: #777777;
+}
+
+.seller-name-text {
+  color: #000000;
+  font-size: 30px;
 }
 
 .vendorAvatar img{
   padding:5px;
   border: 1px solid #dddddd !important;
   border-radius: 5px;
+  max-height: 200px;
+  max-width: 200px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  background-color: #FFFFFF;
+
+}
+
+.specialHR {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+
+}
+
+.glyphicon {
+  color: #dddddd !important;
+}
+
+.seller-Details-Jumbotron{
+  background: #E4F3DA;
+/*  background: #8FD41e;
+  background: #E5F4F7;*/
+  text-align: left;
+  padding-bottom: 20px !important;
+  border-bottom: 3px solid #89cc1d !important;
+}
+
+.text-align-right {
+  text-align: right;
 }
 
