Updated home page.
Added masonry (don’t forget to bower install masonry) to make our
column layout on the main page support irregular shaped images without
looking terrible. Also, I’ve commented out the Twitter bar for now
because it was causing some stack overflows to occur.

For small screen sizes, we’re showing 2 columns of cards since
centering one column of cards is actually pretty difficult.

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -255,8 +255,7 @@ body {
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
   .header,
-  .marketing,
-  .footer {
+  .marketing {
     padding-left: 0;
     padding-right: 0;
   }
