--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -122,10 +122,10 @@
 		      </ul>
 		</div>
 
-		<hr>
+		<div class="specialHR"><hr></div>
 
-		<div ng-repeat="items in trendingProducts | groupBy:3" class="row container-trending">
-	    	<div class="col-trending col-lg-4 col-md-4 col-sm-6" ng-repeat="item in items" >
+		<div ng-repeat="items in vendorDetails.products | groupBy:4" class="row container-trending">
+	    	<div class="col-trending col-md-3 col-sm-6" ng-repeat="item in items" >
 	          	<product-card data="item">
 	      		</product-card>
 	    	</div>  
